# finetune-doctor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: example_dtype_mismatch.py  example_training_script.py
src/finetune_doctor/: __init__.py  capture.py  cli.py  gpu_poller.py  matcher.py  watch.py
src/finetune_doctor/signatures/: __init__.py  loader.py
src/finetune_doctor/signatures/rules/: chatml_format_oom.yaml  ddp_unused_parameters.yaml  dtype_mismatch.yaml  flash_attention_build_failure.yaml  generic_cuda_oom.yaml  lora_target_module_mismatch.yaml  multi_gpu_backward_oom.yaml  oom_during_eval.yaml  optimizer_none_config_crash.yaml  tokenizer_embedding_mismatch.yaml  version_incompatibility_import_error.yaml
tests/: test_capture.py  test_cli_gpu_polling.py  test_coverage_gaps.py  test_matcher.py  test_oom_during_eval_signature.py  test_signatures_batch2.py  test_signatures_batch3.py  test_unicode_fallback.py
